07-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
  namespace: demo
  labels:
    type: sharded
spec:
  host: cys.apache.com
  path: /
  port:
    targetPort: 8080
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDCzCCAfMCFHVJIbwSPHGYClfWwncjgkIiJcTiMA0GCSqGSIb3DQEBCwUAMEIx
[...]
      NsFIcrOlR3TqEocBYff8
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpgIBAAKCAQEAyMurO+GtxRNPvXwQ1TllqAMXGwNiw3XU9v6vTzAmvFW/a5ZY
[...]
      j+pFOg4irhmFRHVLHuwdCmqhsF81Uantw+veuvPcWczW0odkNq2j86FV
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: httpd-service
    weight: 100
  wildcardPolicy: None
